<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="400dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="16dp"
    android:layout_margin="3dp">

    <ImageView
        android:id="@+id/recentImage"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center|top"
        android:scaleType="centerCrop"
        android:background="@color/md_theme_dark_secondary"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:layout_gravity="bottom">

        <TextView
            android:id="@+id/recentName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:gravity="center"
            android:text="@string/app_name" />

        <TextView
            android:id="@+id/recentDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dateexample"
            android:maxLines="1"
            android:textSize="12sp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/Desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:maxLines="5"
            android:layout_margin="10dp"
            android:textSize="12sp"
            android:gravity="center"/>


    </LinearLayout>


</androidx.cardview.widget.CardView>