<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.setting.configureAccount.ConfigureAccountActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.setting.configureprofile.ConfigureProfileActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="50dp"
            android:text="@string/email"
            android:textColor="@color/textColor"/>

        <EditText
            android:id="@+id/emailEd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/roundedcornerwithstroke"
            android:drawableStart="@drawable/emailicon"
            android:drawablePadding="10dp"
            android:inputType="textEmailAddress"
            android:padding="17dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:text="@string/new_email"
            android:textColor="@color/textColor"/>

        <EditText
            android:id="@+id/newemailEd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/roundedcornerwithstroke"
            android:drawableStart="@drawable/emailicon"
            android:drawablePadding="10dp"
            android:inputType="textEmailAddress"
            android:padding="17dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:text="@string/password_lama" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/oldPasswordTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/passwordicon">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/roundedcornerwithstroke"
                android:inputType="textPassword"
                android:padding="20dp"
                android:textColor="@color/textColor"/>
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btn_save"
            style="@style/BlackButtonBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/roundedcornerbackground"
            android:text="@string/Save"
            android:textAllCaps="false"
            android:textColor="@color/textColor1" />

        <Button
            android:id="@+id/btn_cancel"
            style="@style/TransparentButtonBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/roundedcornerwithstroke"
            android:text="@string/Cancel"
            android:textAllCaps="false"
            android:textColor="@color/textColor"
            app:layout_constraintBottom_toBottomOf="parent" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>